Local search - adding test for lazy operators and fixing some bugs found